# serenade

./: .gitignore  README.md  setup.cfg
egs/gtsinger/ssc1/: README.md  run.sh  run_new.sh  run_ori.sh  test_site.ipynb  test_site.py
egs/gtsinger/ssc1/conf/: f0.yaml  refstyles.json  refstyles_old.json  serenade.yaml  serenade_cyclic.yaml  serenade_cyclic_new.yaml  serenade_new.yaml
egs/gtsinger/ssc1/local/: create_cyclic_dump.py  create_gtsinger_splits.py  create_wav_scp.py  download_gtsinger.sh  inference.py
egs/gtsinger/ssc1/utils/: hf_download.py  parse_textgrid.py
serenade/collaters/: ssc.py
serenade/datasets/: audio_mel_dataset.py  dataset.py
serenade/models/: __init__.py  serenade.py  serenade_new.py  t13_nusvcc.py
serenade/models/matcha_components/: decoder.py  flow_matching.py  transformer.py
serenade/modules/gst/: attention.py  style_encoder.py
serenade/modules/phoneme_midi/: decoding.py  feature.py  midi.py  model.py  phonerec_model.py  subnetworks.py
serenade/schedulers/: warmup_lr.py
serenade/trainers/: __init__.py  base.py  ssc.py
serenade/utils/: model_io.py  utils.py
serenade/vocoder/: utils.py  vocoder.py
serenade/vocoder/layers/: causal_conv.py  residual_block.py  residual_stack.py  upsample.py
serenade/vocoder/models/: __init__.py  hifigan.py
utils/: parse_textgrid.py
