[options]
packages = find:
install_requires =
    torch == 2.4.1
    librosa >= 0.8.0
    soundfile>=0.10.2
    tensorboardX>=1.8
    matplotlib>=3.1.0
    PyYAML>=3.12
    tqdm>=4.26.1
    kaldiio>=2.14.1
    h5py>=2.9.0
    yq>=2.10.0
    gdown
    filelock
    protobuf<=3.20.1
    transformers
    nltk
    textgrid
    huggingface_hub
    diffusers
    einops
    mido
    prettytable
    pandas
    tensorboard == 2.13.0
    torchaudio == 2.4.1
    wquantiles==0.6
    nnAudio==0.3.2
    pysptk
    git+https://github.com/lesterphillip/SiFiGAN@main



[options.entry_points]
console_scripts =
    serenade-preprocess = serenade.bin.preprocess:main
    serenade-compute_stats = serenade.bin.compute_statistics:main
    serenade-train = serenade.bin.ssc_train:main
    serenade-decode = serenade.bin.ssc_decode:main
    serenade-inference = serenade.bin.ssc_inference:main

[metadata]
name = serenade
version = 0.1.0
author = Lester Violeta
author_email = violeta.lesterphillip@g.sp.m.is.nagoya-u.ac.jp
description = Singing style conversion based on audio infilling
keywords = voice conversion, singing style conversion
license = CC BY-NC 4.0
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
